objects/Quote_Response_Association__c.object
<CustomObject>
    <fields>
        <fullName>Rx_Administrative_Fee_initial__c</fullName>
        <label>Rx Admin Fee - Fam</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx_Administrative_Fee_sold__c</fullName>
        <label>Rx Admin Fee - Fam  [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx_Rebate_Credit_ByTier_Single_final__c</fullName>
        <label>Rx Rebate Credit - Single [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx_Rebate_Credit_ByTier_Single_sold__c</fullName>
        <label>Rx Rebate Credit  - Single [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx_Rebate_Credit_ByTier_initial_Single__c</fullName>
        <label>Rx Rebate Credit  - Single</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx_Rebate_Credit_By_Tier_final_C__c</fullName>
        <label>Rx Rebate Credit  - Comp [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx_Rebate_Credit_By_Tier_initial_C__c</fullName>
        <description>Drug Rebate Credit initial comp</description>
        <label>Rx Rebate Credit  - Comp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx_Rebate_Credit_by_Tier_final__c</fullName>
        <label>Rx Rebate Credit - Fam [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx_Rebate_Credit_by_Tier_initial__c</fullName>
        <label>Rx Rebate Credit - Fam</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rx_Rebate_Credit_by_Tier_sold__c</fullName>
        <label>Rx Rebate Credit - Fam [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shared_Savings_Pct_In_Network_initial__c</fullName>
        <label>Shared Savings % In Network</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shared_Savings_Pct_Out_Network_final__c</fullName>
        <label>Shared Savings % Out Network [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shared_Savings_Pct_Out_Network_initial__c</fullName>
        <label>Shared Savings % Out Network</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shared_Savings_Pct_Out_Network_sold__c</fullName>
        <label>Shared Savings % Out Network [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shared_Savings_Percent_In_Network_final__c</fullName>
        <label>Shared Savings % In Network [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shared_Savings_Percent_In_Network_sold__c</fullName>
        <label>Shared Savings % In Network [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shared_Savings_Percent_Sold__c</fullName>
        <label>Shared Savings % [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shared_Savings_Percent_final__c</fullName>
        <label>Shared Savings % [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shared_Savings_Percent_initial__c</fullName>
        <label>Shared Savings %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Single_Family_Indicator__c</fullName>
        <formula>Text(AssociatedToQuoteResponse__r.Single_Family_Indicator__c)</formula>
        <label>Single/Family Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Class__c</fullName>
        <label>Tier Class</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Comp</fullName>
                </value>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier_sold__c</fullName>
        <label>Tier-Sold</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Single+Sps</fullName>
                </value>
                <value>
                    <fullName>Single+1</fullName>
                </value>
                <value>
                    <fullName>Single+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Fixed_Cost_Initial__c</fullName>
        <label>MP Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fixed_Cost_final__c</fullName>
        <label>MP Fee [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fixed_Cost_sold__c</fullName>
        <label>MP Fee [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>aHP_Fee_final__c</fullName>
        <label>AHP Fee [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>aHP_Fee_initial__c</fullName>
        <label>AHP Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>assoRecordIdentifier__c</fullName>
        <description>this data is used in the backend to link heron premium data to the associated association record.</description>
        <label>assoRecordIdentifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Quote Association</label>
    <nameField>
        <label>Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Associations</pluralLabel>
    <recordTypes>
        <fullName>Final_Sold_Composite</fullName>
        <active>true</active>
        <label>Final-Sold Composite</label>
    </recordTypes>
    <recordTypes>
        <fullName>Final_Sold_Single_Family</fullName>
        <active>true</active>
        <label>Final-Sold Single-Family</label>
    </recordTypes>
    <recordTypes>
        <fullName>Initial_Composite</fullName>
        <active>true</active>
        <label>Initial Composite</label>
    </recordTypes>
    <recordTypes>
        <fullName>Initial_Single_Family</fullName>
        <active>true</active>
        <label>Initial Single-Family</label>
    </recordTypes>
    <recordTypes>
        <fullName>Premium</fullName>
        <active>true</active>
        <label>Premium</label>
    </recordTypes>
    <recordTypes>
        <fullName>Premium_initial</fullName>
        <active>true</active>
        <label>Premium-initial</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>